[tool.poetry]
name = "coursework-account-widget"
version = "0.1.0"
description = ""
authors = ["Natalia Zueva <zueva_natalia@mail.ru>"]
readme = "README.md"
packages = [{include = "coursework_account_widget"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
